--- a/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
@@ -53,7 +53,7 @@
       pkill -f "apt-get -qq -y update"
 
 # 2x per day between :30 and :39
-- name: Ensure reboot cron job is present
+- name: Ensure reboot-required cron job is present
   ansible.builtin.cron:
     name: "Reboot if it is required"
     hour: "{{ timer_hour }},{{ 12 + timer_hour | int }}"
@@ -64,7 +64,7 @@
       fi
 
 # 2x per day between :40 and :49
-- name: Ensure reboot cron job is present
+- name: Ensure needrestart cron job is present
   ansible.builtin.cron:
     name: "Reboot if needrestart adviced it"
     hour: "{{ timer_hour }},{{ 12 + timer_hour | int }}"
