--- a/playbooks/roles/setup_common/tasks/upgrade.yaml
+++ b/playbooks/roles/setup_common/tasks/upgrade.yaml
@@ -1,8 +1,12 @@
 ---
 - name: Apt upgrade
+  when: ansible_facts.distribution in ('Debian', 'Ubuntu')
   ansible.builtin.apt:
     update_cache: true
     upgrade: dist
+
+- name: Check if reboot is needed after upgrade
+  ansible.builtin.import_tasks: reboot.yaml
 
 - name: Ensure upgraded services are running
   ansible.builtin.meta: flush_handlers
