--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -1,10 +1,10 @@
 ---
-- name: Gather current time of remote system
+- name: Gather current unix time of remote system
   ansible.builtin.setup:
     gather_subset:
       - "date_time"
 
-- name: Stat make.log
+- name: Stats of make.log
   ansible.builtin.stat:
     path: /root/make.log
   register: _make_log
