--- a/playbooks/roles/info_common/tasks/kernel-config.yaml
+++ b/playbooks/roles/info_common/tasks/kernel-config.yaml
@@ -1,16 +1,14 @@
 ---
 - name: Get Linux kernel config file name
   changed_when: false
-  failed_when: false
   ansible.builtin.shell:
-    cmd: ls -t /boot/config-*
+    cmd: ls /boot/config-$(uname -r)
   register: _config_fname
 
 - name: Download Linux kernel config
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
-  when: _config_fname.stdout_lines | length > 0
   ansible.posix.synchronize:
     mode: pull
-    src: "{{ _config_fname.stdout_lines[0] }}"
+    src: "{{ _config_fname.stdout }}"
     dest: "{{ tmp_dir }}/kconfig/{{ inventory_hostname }}.config"
