--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -4,6 +4,7 @@
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: true
   vars:
-    _description: "{{ snapshot_description | default(inventory_hostname | regex_replace('^hi', '')) }}"
+    _description: "{{ inventory_hostname | regex_replace('^hi', '') }}"
   ansible.builtin.command:
-    cmd: hcloud --quiet --poll-interval 15s server create-image --type snapshot --description="{{ _description }}" {{ inventory_hostname }}
+    cmd: >-
+      hcloud --quiet --poll-interval 30s server create-image --type snapshot --description="{{ _description }}" {{ inventory_hostname }}
