--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -9,8 +9,8 @@
       /root/ipv4-rules.sh save
       /root/ipv6-rules.sh save
 
-      {{ ddos_allow_prometheus }} {{ ddos_add_bridge_v4 }} /root/ipv4-rules.sh start
-      {{ ddos_add_bridge_v6 }} /root/ipv6-rules.sh start
+      {{ add_local_services_v4 }} {{ add_remote_services_v4 }} {{ configured_relays_v4 }} /root/ipv4-rules.sh start
+      {{ add_local_services_v6 }} {{ add_remote_services_v6 }} {{ configured_relays_v6 }} /root/ipv6-rules.sh start
     executable: /bin/bash
 
 - name: Reload Systemd
