--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -64,3 +64,8 @@
     src: nginx.conf.j2
     dest: /etc/nginx/conf.d/tor-relays.conf
   notify: Reload nginx
+
+- name: Verify nginx config
+  changed_when: false
+  ansible.builtin.command:
+    cmd: nginx -t
