allow an IPv6 prometheus server

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -16,6 +16,7 @@ metrics_port: ""
 nginx_metrics: false
 node_metrics: false
 prometheus_server: ""
+prometheus_server6: ""
 
 # any valid 1-liner
 custom_command: ""
