--- a/playbooks/roles/info_setup/tasks/metrics.yaml
+++ b/playbooks/roles/info_setup/tasks/metrics.yaml
@@ -1,23 +1,38 @@
 ---
-- name: File Metrics
+- name: File metrics
   delegate_to: localhost
   throttle: 1
   module_defaults:
     ansible.builtin.lineinfile:
+      create: true
+      mode: "0644"
       line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
       regex: '^- targets: \["{{ inventory_hostname }}:'
   block:
-    - name: Node Metrics
+    - name: Node metrics
       when: node_metrics | default(false)
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/node_metrics.yaml"
 
-    - name: Snowflake Metrics
+    - name: Snowflake metrics
       when: snowflake_metrics | default(false)
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/snowflake_metrics.yaml"
 
-    - name: Tor Metrics
+    - name: Tor metrics
       when: tor_metrics | default(false)
+      block:
+        - name: Tor bridge metrics
+          when: bridge_distribution
+          ansible.builtin.lineinfile:
+            path: "{{ tmp_dir }}/tor_bridge.yaml"
+
+        - name: Tor server metrics
+          when: not bridge_distribution
+          ansible.builtin.lineinfile:
+            path: "{{ tmp_dir }}/tor_server.yaml"
+
+    - name: DDoS metrics
+      when: ddos_metrics | default(false)
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_metrics.yaml"
+        path: "{{ tmp_dir }}/ddos_metrics.yaml"
