--- a/playbooks/roles/info_setup/tasks/metrics.yaml
+++ b/playbooks/roles/info_setup/tasks/metrics.yaml
@@ -15,12 +15,12 @@
         path: "{{ tmp_dir }}/node_metrics.yaml"
 
     - name: Snowflake metrics
-      when: snowflake_metrics | default(false)
+      when: snowflake_metrics is defined and snowflake_metrics
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/snowflake_metrics.yaml"
 
     - name: Tor metrics
-      when: tor_metrics | default(false)
+      when: tor_metrics is defined and tor_metrics
       block:
         - name: Tor bridge metrics
           when: bridge_distribution
@@ -33,6 +33,6 @@
             path: "{{ tmp_dir }}/tor_server.yaml"
 
     - name: DDoS metrics
-      when: ddos_metrics | default(false)
+      when: ddos_metrics is defined and ddos_metrics
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/ddos_metrics.yaml"
