--- a/playbooks/roles/setup_common/tasks/reboot.yaml
+++ b/playbooks/roles/setup_common/tasks/reboot.yaml
@@ -31,3 +31,6 @@
     executable: /bin/bash
   register: _service_reboot_needed
   notify: Reboot system
+
+- name: Flush handlers (reboot probably)
+  ansible.builtin.meta: flush_handlers
