--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -34,7 +34,8 @@
 - name: Reboot system
   listen: Reboot system
   vars:
-    __additional_timeout_tor: "{{ tor_port is defined | ternary(45, 0) }}"
+    _additional_timeout_tor: "{{ tor_port is defined | ternary(45, 0) }}"
   ansible.builtin.reboot:
     connect_timeout: 2
-    reboot_timeout: "{{ 50 + __additional_timeout_tor | int }}"
+    reboot_timeout: "{{ 60 + _additional_timeout_tor | int }}"
+    post_reboot_delay: 10
