validate booleans + spelling + quoting

--- a/playbooks/roles/info_common/defaults/main.yaml
+++ b/playbooks/roles/info_common/defaults/main.yaml
@@ -2,4 +2,4 @@
 log_lines: 20
 
 log_unattended: /var/log/unattended-upgrades/unattended-upgrades-dpkg.log
-log_system_since: "1 day ago"
+log_system_since: 1 day ago
