--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Gather installed packages
-  when: not snowflake_build_from_source
+  when: snowflake_build_from_source is not defined or not snowflake_build_from_source
   ansible.builtin.package_facts:
 
 - name: Snowflake version
