--- a/playbooks/roles/setup_tor/tasks/validate.yaml
+++ b/playbooks/roles/setup_tor/tasks/validate.yaml
@@ -23,8 +23,8 @@
   ansible.builtin.assert:
     quiet: true
     that:
-      - "tor_build_from_source == tor_build_from_source | bool"
-      - "tor_prune_git_repo == tor_prune_git_repo | bool"
-      - "lyrebird_prune_git_repo == lyrebird_prune_git_repo | bool"
-      - "ddos_metrics == ddos_metrics | bool"
-      - "tor_metrics == tor_metrics | bool"
+      - "tor_build_from_source in ('true', 'false') or tor_build_from_source in (true, false)"
+      - "tor_prune_git_repo in ('true', 'false') or tor_prune_git_repo in (true, false)"
+      - "lyrebird_prune_git_repo in ('true', 'false') or lyrebird_prune_git_repo in (true, false)"
+      - "ddos_metrics in ('true', 'false') or ddos_metrics in (true, false)"
+      - "tor_metrics in ('true', 'false') or tor_metrics in (true, false)"
