--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -58,15 +58,8 @@
     remote_src: true
   notify: Restart Snowflake
 
-- name: Add systemd unit
-  ansible.builtin.template:
-    src: snowflake-proxy.service.j2
-    dest: /etc/systemd/system/snowflake-proxy.service
-  notify: Restart Snowflake
-
-- name: Create cron job to restart service in case that systemd refused to do it
+- name: Create cron job to restart snowflake if systemd refused to do it
   ansible.builtin.cron:
-    name: "restart service if systemd refused to do it"
-    special_time: hourly
+    name: restart snowflake-proxy if systemd refused to do it
     job: >-
       systemctl is-failed snowflake-proxy && systemctl start snowflake-proxy
