--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -11,6 +11,12 @@
     state: absent
   notify: Reload nginx
 
+- name: Create cron job to restart nginx if systemd refused to do it
+  ansible.builtin.cron:
+    name: restart nginx if systemd refused to do it
+    job: >-
+      systemctl is-failed nginx && systemctl start nginx
+
 - name: HTTPs for nginx
   when: metrics_port
   block:
