--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -58,6 +58,12 @@
     remote_src: true
   notify: Restart Snowflake
 
+- name: Add systemd unit
+  ansible.builtin.template:
+    src: snowflake-proxy.service.j2
+    dest: /etc/systemd/system/snowflake-proxy.service
+  notify: Restart Snowflake
+
 - name: Create cron job to restart snowflake if systemd refused to do it
   ansible.builtin.cron:
     name: restart snowflake-proxy if systemd refused to do it
