--- a/playbooks/roles/poweron/tasks/poweron.yaml
+++ b/playbooks/roles/poweron/tasks/poweron.yaml
@@ -3,8 +3,8 @@
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   block:
-    - name: Check if it is up
-      when: inventory_hostname not in groups.hcloud
+    - name: Check if system is up
+      when: not is_in_status_off
       changed_when: _is_up.rc != 0
       failed_when: false # avoid ansible output spam
       ansible.builtin.shell:
@@ -16,7 +16,7 @@
       register: _is_up
 
     - name: Power on the system
-      when: _is_up.rc | default(0) != 0 or inventory_hostname in groups.hcloud_server_status_off | default([])
+      when: _is_up.changed or is_in_status_off
       changed_when: true
       failed_when: _powered_on.rc != 0
       ansible.builtin.shell:
@@ -28,7 +28,7 @@
 
           i=15
           while ((i--)); do
-            if ping -q -c 2 {{ inventory_hostname }}; then
+            if ping -q -c 1 {{ inventory_hostname }}; then
               sleep 15
               exit 0
             fi
